unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Created_from_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_from_ID__c</fullName>
    <description>The ID of the record the User was on when creating this Observation Record through the onscreen flow</description>
    <label>Created from ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>