unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Currently_Nursing__c.field-meta.xml
<CustomField>
    <fullName>Currently_Nursing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Nursing?</label>
    <type>Checkbox</type>
</CustomField>