unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Currently_Pregnant__c.field-meta.xml
<CustomField>
    <fullName>Currently_Pregnant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Pregnant?</label>
    <type>Checkbox</type>
</CustomField>