unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Date_of_Observation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Observation__c</fullName>
    <label>Date of Observation</label>
    <type>Date</type>
</CustomField>