unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Emotional_Distress_Score__c.field-meta.xml
<CustomField>
    <fullName>Emotional_Distress_Score__c</fullName>
    <description>Score of 1-10 indicating the level of emotional distress the Patient is experiencing.</description>
    <label>Emotional Distress Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>