unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Familial_Distress_Score__c.field-meta.xml
<CustomField>
    <fullName>Familial_Distress_Score__c</fullName>
    <description>Score of 1-10 indicating the level of familial distress the Patient is experiencing.</description>
    <label>Familial Distress Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>