unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Financial_Practical_Distress_Score__c.field-meta.xml
<CustomField>
    <fullName>Financial_Practical_Distress_Score__c</fullName>
    <description>Score of 1-10 indicating the level of financial or practical distress the Patient is experiencing.</description>
    <label>Financial / Practical Distress Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>