unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Genetic_Testing_Results__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Testing_Results__c</fullName>
    <label>Genetic Testing Results</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRCA1 Positive</fullName>
            </value>
            <value>
                <fullName>BRCA1 Negative</fullName>
            </value>
            <value>
                <fullName>BRCA2 Positive</fullName>
            </value>
            <value>
                <fullName>BRCA2 Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>