unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Genetically_Tested_for_Breast_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Genetically_Tested_for_Breast_Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genetically Tested for Breast Cancer?</label>
    <type>Checkbox</type>
</CustomField>