unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__AppliesDateTime__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AppliesDateTime__c</fullName>
    <description>Physiologically Relevant time/time-period for observation</description>
    <inlineHelpText>Physiologically Relevant time/time-period for observation</inlineHelpText>
    <label>Applies Date Time</label>
    <type>DateTime</type>
</CustomField>