unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__BodySiteCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__BodySiteCode__c</fullName>
    <description>Body Site Symbol in syntax defined by the system</description>
    <label>Body Site Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>