unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__BodySiteLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__BodySiteLabel__c</fullName>
    <label>Body Site Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>