unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__Comments__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Comments__c</fullName>
    <description>Comments about result</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>