unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__InterpretationLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__InterpretationLabel__c</fullName>
    <label>Interpretation Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>