unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__InterpretationSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__InterpretationSystem__c</fullName>
    <description>Identity of the terminology system</description>
    <label>Interpretation System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>