unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__MethodLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MethodLabel__c</fullName>
    <label>Method Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>