unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ReferenceMeaningLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReferenceMeaningLabel__c</fullName>
    <label>Reference Meaning Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>