unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ReferenceRangeHighUnit__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReferenceRangeHighUnit__c</fullName>
    <label>Reference Range High Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>