unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ReferenceRangeHighValue__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReferenceRangeHighValue__c</fullName>
    <label>Reference Range High Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>