unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ReferenceRangeMeaningSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReferenceRangeMeaningSystem__c</fullName>
    <description>Identity of the terminology system</description>
    <label>Reference Range Meaning System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>