unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ReferenceRangeUnit__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReferenceRangeUnit__c</fullName>
    <label>Reference Range Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>