unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ReliabilityCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ReliabilityCode__c</fullName>
    <label>Reliability Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>