unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__SampledData__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SampledData__c</fullName>
    <label>Sampled Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>