unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueAttachment__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueAttachment__c</fullName>
    <label>Value Attachment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>