unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueQuantityUnit__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueQuantityUnit__c</fullName>
    <description>Actual Result</description>
    <inlineHelpText>Actual Result</inlineHelpText>
    <label>Value Quantity Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>