unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueRatioNumerator__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueRatioNumerator__c</fullName>
    <label>Value Ratio Numerator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>