unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueSampledDataDimensions__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueSampledDataDimensions__c</fullName>
    <label>Value Sampled Data Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>