unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueSampledDataOriginCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueSampledDataOriginCodeLabel__c</fullName>
    <label>Value Sampled Data Origin Code Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>