unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueSampledDataOriginCodeSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueSampledDataOriginCodeSystem__c</fullName>
    <label>Value Sampled Data Origin Code System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>