unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueSampledDataOriginSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueSampledDataOriginSystem__c</fullName>
    <label>Value Sampled Data Origin System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>