unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueSampledDataOriginUnits__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueSampledDataOriginUnits__c</fullName>
    <label>Value Sampled Data Origin Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>