unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/HealthCloudGA__ValueSampledDataOriginValue__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValueSampledDataOriginValue__c</fullName>
    <label>Value Sampled Data Origin Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>