unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Hormone_Replacement_Therapy__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Replacement_Therapy__c</fullName>
    <label>Hormone Replacement Therapy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes: not currently on</fullName>
            </value>
            <value>
                <fullName>Yes: currently on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>