unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Menopausal_Status__c.field-meta.xml
<CustomField>
    <fullName>Menopausal_Status__c</fullName>
    <label>Menopausal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premenopausal</fullName>
            </value>
            <value>
                <fullName>Perimenopausal</fullName>
            </value>
            <value>
                <fullName>Postmenopausal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>