unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Observations</relationshipLabel>
    <relationshipName>Observations</relationshipName>
    <type>Lookup</type>
</CustomField>