unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Weight_lbs__c</fullName>
    <label>Weight (lbs)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>