unpackaged/main/default/objects/HealthCloudGA__EhrObservation__c/fields/Why_did_your_menstrual_cycle_end__c.field-meta.xml
<CustomField>
    <fullName>Why_did_your_menstrual_cycle_end__c</fullName>
    <label>Why did your menstrual cycle end?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural menopause</fullName>
            </value>
            <value>
                <fullName>Removal of both ovaries</fullName>
            </value>
            <value>
                <fullName>Radiation treatment</fullName>
            </value>
            <value>
                <fullName>Hormone-induced menopause</fullName>
            </value>
            <value>
                <fullName>Chemotherapy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>